<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/about_icon_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/content_description_app_icon"
            android:src="@drawable/icon_big" />

        <TextView
            android:id="@+id/about_app_name"
            style="@style/font_roboto_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/divider_color" />


        <TextView
            style="@style/font_roboto_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_horizontal"
            android:text="@string/about_user_feedback_title"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            style="@style/font_roboto_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/about_user_feedback_explanation"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <Button
            android:id="@+id/send_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/about_user_feedback_email_button" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/divider_color" />

        <TextView
            style="@style/font_roboto_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/about_legal_info_title"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            style="@style/font_roboto_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/about_legal_info_explanation"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/divider_color" />

        <TextView
            style="@style/font_roboto_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/about_open_source_title"
            android:textColor="@color/text_color"
            android:textSize="17sp" />


        <TextView
            style="@style/font_roboto_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/about_open_source_explanation"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/about_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/about_github"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/about_opensource_licenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/about_third_party_libraries"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>