<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/filter_close"
                style="@style/font_roboto_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="4dp"
                android:background="?selectableItemBackground"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_vector_filter_cancel"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/filter_cancel"
                android:textAllCaps="true"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/filter_apply"
                style="@style/font_roboto_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="4dp"
                android:background="?selectableItemBackground"
                android:drawableEnd="@drawable/ic_vector_filter_apply"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/filter_apply"
                android:textAllCaps="true"
                android:textColor="@color/white" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        style="@style/font_roboto_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/filter_fansubs"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/filter_fansubs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TO BE FILLED PROGRAMMATICALLY -->
        </LinearLayout>

    </ScrollView>

</LinearLayout>